# chunking

./: .gitignore  README.md  experiments.ipynb  main.py  pyproject.toml
chunkers/: base_chunker.py  fixed_token_chunker.py
chunking_experimentation/: chunkers.py  config.py  experimenter.py  ranges.py  utils.py
configs/: config.yaml
reports/results/: visualization.ipynb
reports/results/data/: output.yaml  results.csv
utils/: experiment.py
