[project]
name = "chunking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "sentence-transformers>=4.0.1",
    "tiktoken>=0.9.0",
]
