[project]
name = "chunking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.3.0",
    "chromadb>=0.6.3",
    "fuzzywuzzy>=0.18.0",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "python-levenshtein>=0.27.1",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.0.1",
    "tiktoken>=0.9.0",
]
